--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ documentation = "https://github.com/timueh/py-epc-qr"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-PyYAML = "^6.0"
-"qrcode[pil]" = "^7.3.1"  # Let qrcode decide of the version of Pillow to be installed
-typer = "^0.4.1"
+qrcode = {extras = ["pil"], version = "^8.2"}
+pyyaml = "^6.0.3"
+typer = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
