--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.9"
 qrcode = {extras = ["pil"], version = "^8.2"}
 pyyaml = "^6.0.3"
 typer = "^0.20.0"
+schwifty = "^2025.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
