--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "py-epc-qr"
-version = "0.1.3"
+version = "0.1.4"
 description = "Generate EPC-compatible QR codes for wire transfers"
 authors = ["timueh <t.muehlpfordt@mailbox.org>"]
 license = "MIT"
@@ -14,7 +14,7 @@ python = "^3.9"
 qrcode = {extras = ["pil"], version = "^8.2"}
 pyyaml = "^6.0.3"
 typer = "^0.20.0"
-schwifty = "^2025.9.0"
+schwifty = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
